archivist: added endpoint for requests.  Can be used for #ARL-5xy

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -190,6 +190,11 @@ archivist.events.ssl=false
 ## Dynamic Hierarchy  Settings
 archivist.dyhi.maxFoldersPerLevel=2048
 
+## Request Email Settings
+
+### The email to send all request messages to.
+archivist.requests.managerEmail = admin@zorroa.com
+
 ## Maintenance options.
 
 ### Number of seconds on inactivity before an analyst is considered down.
