archivist: fixes EVI-122, watermarks.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -173,11 +173,11 @@ archivist.watermark.enabled = false
 ### Text to apply to proxy images.
 archivist.watermark.template = Requested by #[USER] on #[DATE]
 
-### The minimum width the image must be to get a watermark.
-archivist.watermark.min-proxy-width = 384
+### The minimum size (width or height) the image must be to get a watermark.
+archivist.watermark.min-proxy-size = 384
 
 ### The watermark font size
-archivist.watermark.font-size = 6
+archivist.watermark.font-size = 10
 
 ## Event port configuration (deprecated)
 
