archivist: allow watermark settings to be live changed.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -179,6 +179,9 @@ archivist.watermark.min-proxy-size = 384
 ### The watermark font size
 archivist.watermark.font-size = 10
 
+### The font for the watermark
+archivist.watermark.font-name = Arial Black
+
 ## Event port configuration (deprecated)
 
 ### The port for publishing events. (deprecated)
