--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -350,6 +350,9 @@ endpoints.info.enabled=true
 ### Enable the /health endpoint
 endpoints.health.enabled=true
 
+### Enable the /metrics endpoint
+endpoints.metrics.enabled=true
+
 ### Make all endpoints sensitive by default
 endpoints.sensitive=true
 
@@ -358,6 +361,9 @@ endpoints.info.sensitive=false
 
 ### Make /health endpoint non-sensitive
 endpoints.health.sensitive=false
+
+### Make /metrics endpoint sensitive
+endpoints.metrics.sensitive=true
 
 ## Database Migration Settings
 
