--- a/zorroa-security/pom.xml
+++ b/zorroa-security/pom.xml
@@ -10,6 +10,8 @@
 
     <properties>
         <kotlin.version>1.2.21</kotlin.version>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
     <dependencyManagement>
@@ -20,11 +22,6 @@
             <version>1.5.9.RELEASE</version>
             <type>pom</type>
             <scope>import</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>2.2.1.RELEASE</version>
         </dependency>
         </dependencies>
     </dependencyManagement>
@@ -40,6 +37,10 @@
             <artifactId>kotlin-test</artifactId>
             <version>${kotlin.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
         </dependency>
     </dependencies>
 
