archivist:  added server-sdk and saml auth project.

--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -97,6 +97,11 @@
 
         <dependency>
             <groupId>com.zorroa</groupId>
+            <artifactId>server-sdk</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zorroa</groupId>
             <artifactId>common</artifactId>
         </dependency>
 
