--- a/common/pom.xml
+++ b/common/pom.xml
@@ -28,6 +28,11 @@
 
         <dependency>
             <groupId>com.zorroa</groupId>
+            <artifactId>server-sdk</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zorroa</groupId>
             <artifactId>sdk</artifactId>
             <scope>provided</scope>
         </dependency>
