--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -60,8 +60,7 @@
 
         <dependency>
             <groupId>com.zorroa</groupId>
-            <artifactId>zorroa-security</artifactId>
-            <version>1.0.0</version>
+            <artifactId>server-sdk</artifactId>
         </dependency>
 
         <dependency>
