--- a/server-sdk/pom.xml
+++ b/server-sdk/pom.xml
@@ -5,8 +5,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.zorroa</groupId>
-    <artifactId>zorroa-security</artifactId>
-    <version>1.0.0</version>
+    <artifactId>server-sdk</artifactId>
+    <version>0.39.0</version>
 
     <properties>
         <kotlin.version>1.2.30</kotlin.version>
@@ -41,6 +41,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
+            <version>4.2.3.RELEASE</version>
         </dependency>
     </dependencies>
 
