archivist: updated code to use new group names and server sdk

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -111,16 +111,36 @@ archivist.security.ldap.filter=(cn={0})
 ### Check and import authorities from an external source.
 archivist.security.ldap.userDetailsPlugin =
 
+## SAML Security configuration.
+
+### The SAML base return URL
+archivist.security.saml.baseUrl = http://localhost:8066
+
+### Enable SAML discovery
+archivist.security.saml.discovery = true
+
+### SAML keystore path
+archivist.security.saml.keystore.path = file://${archivist.path.home}/config/saml/keystore.jks
+
+### SAML keystore password
+archivist.security.saml.keystore.password = zorroa
+
+### SAML key alias
+archivist.security.saml.keystore.alias = zorroa
+
+### SAML key password
+archivist.security.saml.keystore.keyPassword = zorroa
+
 ## Permissions Configuration
 
 ### The default permissions assigned to new assets.
-archivist.security.permissions.defaultRead = group::everyone
+archivist.security.permissions.defaultRead = zorroa::everyone
 
 ### The default permissions assigned to new assets.
-archivist.security.permissions.defaultWrite = group::manager
+archivist.security.permissions.defaultWrite = zorroa::manager
 
 ### The default permissions assigned to new assets.
-archivist.security.permissions.defaultExport = group::everyone
+archivist.security.permissions.defaultExport = zorroa::everyone
 
 ## Search Settings
 
@@ -144,7 +164,7 @@ archivist.search.sortFields = origin.timeCreated:DESC
 archivist.lfs.paths=/
 
 ### The permission groups that are allowed to use the local file system service.
-archivist.lfs.permissions=group::everyone
+archivist.lfs.permissions=zorroa::everyone
 
 ## Import Settings
 
