archivist: support migration of groups from SAML into zorroa.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -1,29 +1,23 @@
 
 archivist.path.index=unittest/index
 archivist.path.home=unittest
-#
-# Override the location of the unittest DB so it doesn't pick up data
-# we add from running the server locally.
-#
 
 ### The SQL DB vendor.
-#archivist.datasource.primary.vendor=postgresql
+archivist.datasource.primary.vendor=postgresql
 
 ### The JDBC URL to the Archivist SQL database.
-#archivist.datasource.primary.url=jdbc:postgresql://localhost/chambers?currentSchema=zorroa
+archivist.datasource.primary.url=jdbc:postgresql://localhost/${USER}?currentSchema=zorroa
 
 ### The driver for the Archivist SQL database.
-#archivist.datasource.primary.driver-class-name=org.postgresql.Driver
+archivist.datasource.primary.driver-class-name=org.postgresql.Driver
 
 ### The username for the Archivist SQL database.
-#archivist.datasource.primary.username=chambers
+archivist.datasource.primary.username=chambers
 
 ### The password for the Archivist SQL database.
-#archivist.datasource.primary.password=
+archivist.datasource.primary.password=
 
-#flyway.schemas=zorroa
-
-archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
+flyway.schemas=zorroa
 
 #
 # Run the the web server and event server on different port.
@@ -37,7 +31,6 @@ archivist.cluster.command.port = 7065
 archivist.path.shared=../unittest/shared
 
 archivist.lfs.paths=${archivist.path.home}/../../../zorroa-test-data
-
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
