--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -128,6 +128,9 @@ archivist.security.saml.keystore.password = zorroa
 ### SAML key alias
 archivist.security.saml.keystore.alias = zorroa
 
+### SAML import permissions/groups from SAML
+archivist.security.saml.permissions.import = true
+
 ### SAML key password
 archivist.security.saml.keystore.keyPassword = zorroa
 
