--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -163,7 +163,7 @@ archivist.search.keywords.static.fields =
 
 ### The default sort fields in the format of field:direction,field:direction.
 ### Score is always first.
-archivist.search.sortFields = origin.timeCreated:DESC
+archivist.search.sortFields = zorroa.timeCreated:DESC
 
 ## Local file system settings.
 
