--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -68,20 +68,23 @@ archivist.index.replicas = 1
 
 ## Priamary DB configuration.
 
+### The SQL DB schema name.
+flyway.schemas=zorroa
+
 ### The SQL DB vendor.
-archivist.datasource.primary.vendor=h2
+archivist.datasource.primary.vendor=postgresql
 
 ### The JDBC URL to the Archivist SQL database.
-archivist.datasource.primary.url=jdbc:h2:${archivist.path.db};DB_CLOSE_DELAY=-1;LOCK_TIMEOUT=10000
+archivist.datasource.primary.url=jdbc:postgresql://localhost:5432/zorroa?currentSchema=zorroa
 
 ### The driver for the Archivist SQL database.
-archivist.datasource.primary.driver-class-name=org.h2.Driver
+archivist.datasource.primary.driver-class-name=org.postgresql.Driver
 
 ### The username for the Archivist SQL database.
-archivist.datasource.primary.username=sa
+archivist.datasource.primary.username=zorroa
 
 ### The password for the Archivist SQL database.
-archivist.datasource.primary.password=
+archivist.datasource.primary.password=zorroa
 
 ## Password Security Configuration
 
