archivist: removed reference to zorroa in db schema, updated elastic mapping.

--- a/common/src/main/resources/db/mappings/archivist/V11__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V11__mapping.json
@@ -108,6 +108,18 @@
             }
           }
         },
+        "media": {
+          "properties": {
+            "clip": {
+              "properties": {
+                "parent": {
+                  "type": "string",
+                  "index": "not_analyzed"
+                }
+              }
+            }
+          }
+        },
         "zorroa": {
           "properties": {
             "timeCreated": {
