archivist: added min/max zoom settings for curator.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -190,9 +190,6 @@ archivist.export.maxAssetCount=1024
 ### The default priority for an export task.  Lower is better.
 archivist.export.priority = 10
 
-### The default drag template for exported metadata.
-archivist.export.dragTemplate = %{source.path}
-
 ### The order in which to request HMTL5 video formats when streaming video
 archivist.export.videoStreamExtensionFallbackOrder=mp4,m4v,webm,ogv,ogg
 
@@ -430,3 +427,14 @@ spring.h2.console.settings.web-allow-others=false
 
 ### Path to embedded H2 console
 spring.h2.console.path=/admin/console
+
+## Curator Settings
+
+### The default drag template for exported metadata.
+curator.thumbnails.drag-template = %{source.path}
+
+### The minimum zoom for the lightbox
+curator.lightbox.zoom-min =
+
+### The maximum zoom for the lightbox
+curator.lightbox.zoom-max =
