archivist: implemented export append pipelines.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -190,6 +190,9 @@ archivist.export.maxAssetCount=300
 ### The default priority for an export task.  Lower is better.
 archivist.export.priority = 10
 
+### A list of pipelines to append to all export jobs
+archivist.export.appendPipelines =
+
 ### The order in which to request HMTL5 video formats when streaming video
 archivist.export.videoStreamExtensionFallbackOrder=mp4,m4v,webm,ogv,ogg
 
