archivist: changes for running DB locally.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -81,7 +81,7 @@ archivist.datasource.primary.url=jdbc:postgresql://localhost:5432/zorroa?current
 archivist.datasource.primary.driver-class-name=org.postgresql.Driver
 
 ### The username for the Archivist SQL database.
-archivist.datasource.primary.username=zorroa
+archivist.datasource.primary.username=${USER}
 
 ### The password for the Archivist SQL database.
 archivist.datasource.primary.password=zorroa
