--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -5,21 +5,13 @@ archivist.path.home=unittest
 ### The SQL DB vendor.
 archivist.datasource.primary.vendor=postgresql
 
+flyway.schemas=unittest
+
 ### The JDBC URL to the Archivist SQL database.
-archivist.datasource.primary.url=jdbc:postgresql://localhost/${USER}?currentSchema=zorroa
-
-### The driver for the Archivist SQL database.
-archivist.datasource.primary.driver-class-name=org.postgresql.Driver
-
-### The username for the Archivist SQL database.
-archivist.datasource.primary.username=chambers
+archivist.datasource.primary.url=jdbc:postgresql://localhost/${USER}?currentSchema=unittest
 
 ### The password for the Archivist SQL database.
 archivist.datasource.primary.password=
-
-flyway.schemas=zorroa
-
-#archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
 
 #
 # Run the the web server and event server on different port.
