archivist/common: field refactor, with new mapping

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -155,17 +155,10 @@ archivist.security.permissions.defaultExport = zorroa::everyone
 
 ## Search Settings
 
-### Automatically detect and utilize fields in keyword searches.
-archivist.search.keywords.auto.enabled = true
+### A key:value formatted list of boosted fields,foo:1.0,bar:2.0
+archivist.search.keywords.boost = media.content:1.0, media.title:2.0, media.description=1.0
 
-### If keywords.auto.enabled is true, dynamically add fields with this name to a query search.
-archivist.search.keywords.auto.fields = keywords.all,keywords,filename,content,title,caption
-
-### A JSON Map<String,Float> of hard coded keywords fields,foo:1.0,bar:2.0
-archivist.search.keywords.static.fields =
-
-### The default sort fields in the format of field:direction,field:direction.
-### Score is always first.
+### The default sort fields in the format of field:direction,field:direction. Score is always first.
 archivist.search.sortFields = zorroa.timeCreated:DESC
 
 ## Local file system settings.
