achivist: keyword and mapping cleanup.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -156,7 +156,7 @@ archivist.security.permissions.defaultExport = zorroa::everyone
 ## Search Settings
 
 ### A key:value formatted list of boosted fields,foo:1.0,bar:2.0
-archivist.search.keywords.boost = media.content:1.0, media.title:2.0, media.description=1.0
+archivist.search.keywords.boost = media.content:1.0, media.title:2.0, media.description:1.0
 
 ### The default sort fields in the format of field:direction,field:direction. Score is always first.
 archivist.search.sortFields = zorroa.timeCreated:DESC
