archivist: switched to undertow

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -336,6 +336,18 @@ server.tomcat.accesslog.request-attributes-enabled=true
 ### The log file suffix
 server.tomcat.accesslog.suffix=.log
 
+### Size of each buffer, in bytes.
+server.undertow.buffer-size=16384
+
+### Whether to allocate buffers outside the Java heap.
+server.undertow.direct-buffers=true
+
+### Number of I/O threads to create for the worker.
+server.undertow.io-threads=4
+
+### Number of worker threads.
+server.undertow.worker-threads=20
+
 ## Spring Thymeleaf Settings
 
 ### The classpath to Thymeleaf templates.
