es: added porter stemming.

--- a/common/src/main/resources/db/mappings/archivist/V11__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V11__mapping.json
@@ -17,14 +17,8 @@
           "filter": [
             "trim",
             "delimiter_filter",
-            "lowercase"
-          ]
-        },
-        "case_sensitive": {
-          "tokenizer": "keyword",
-          "filter": [
-            "trim",
-            "delimiter_filter"
+            "lowercase",
+            "porter_stem"
           ]
         },
         "content": {
