common: added static mapping for taxon ids

--- a/common/src/main/resources/db/mappings/archivist/V11__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V11__mapping.json
@@ -104,6 +104,18 @@
 
               }
             },
+            "taxonomy": {
+              "properties": {
+                "folderId": {
+                  "type": "string",
+                  "index": "not_analyzed"
+                },
+                "taxId": {
+                  "type": "string",
+                  "index": "not_analyzed"
+                }
+              }
+            },
             "permissions": {
               "properties": {
                 "read": {
