--- a/common/src/main/resources/db/mappings/archivist/V11__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V11__mapping.json
@@ -57,12 +57,6 @@
         "package_tokenizer" : {
           "type": "path_hierarchy",
           "delimiter": "."
-        },
-        "ngram_tokenizer": {
-          "type": "edgeNGram",
-          "min_gram": 3,
-          "max_gram": 32,
-          "token_chars": ["letter", "digit"]
         }
       }
     }
@@ -89,6 +83,18 @@
         "enabled": false
       },
       "properties": {
+        "media": {
+          "properties": {
+            "clip": {
+              "properties": {
+                "parent": {
+                  "type": "string",
+                  "index": "not_analyzed"
+                }
+              }
+            }
+          }
+        },
         "zorroa": {
           "properties": {
             "timeCreated": {
