archivist-test: make current user the admin email

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -13,6 +13,8 @@ archivist.datasource.primary.url=jdbc:postgresql://localhost/${USER}?currentSche
 ### The password for the Archivist SQL database.
 archivist.datasource.primary.password=
 
+archivist.requests.managerEmail=${USER}@zorroa.com
+
 #
 # Run the the web server and event server on different port.
 #
