archivist: path now has its own field type to fix dyhi

--- a/common/src/main/resources/db/mappings/archivist/V11__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V11__mapping.json
@@ -219,7 +219,7 @@
                 },
                 "analyzed": {
                   "type": "string",
-                  "analyzer": "keyword"
+                  "analyzer": "default"
                 }
               }
             }
