archivist: change default asset write to librarian

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -148,7 +148,7 @@ archivist.security.saml.permissions.import = true
 archivist.security.permissions.defaultRead = zorroa::everyone
 
 ### The default permissions assigned to new assets.
-archivist.security.permissions.defaultWrite = zorroa::manager
+archivist.security.permissions.defaultWrite = zorroa::librarian
 
 ### The default permissions assigned to new assets.
 archivist.security.permissions.defaultExport = zorroa::everyone
