common: hard map clip frames/length to doubles.

--- a/common/src/main/resources/db/mappings/archivist/V11__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V11__mapping.json
@@ -85,6 +85,15 @@
                 "parent": {
                   "type": "string",
                   "index": "not_analyzed"
+                },
+                "start": {
+                  "type": "double"
+                },
+                "stop": {
+                  "type": "double"
+                },
+                "length": {
+                  "type": "double"
                 }
               }
             }
