saml: added more saml options.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -127,6 +127,12 @@ archivist.security.saml.baseUrl = http://localhost:8066
 ### Enable SAML discovery
 archivist.security.saml.discovery = true
 
+### Set an external discovery URL
+archivist.security.saml.idpDiscoveryURL =
+
+### Set an external discovery response
+archivist.security.saml.idpDiscoveryResponseURL =
+
 ### SAML keystore path
 archivist.security.saml.keystore.path = file://${archivist.path.home}/config/saml/keystore.jks
 
