analyst: fixes issue with ES error at startup

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -67,4 +67,7 @@ analyst.executor.pollTimeMs = 1000
 ### -1 to disable.
 analyst.executor.idleMinutesShutdown=-1
 
+## Management Settings
 
+### Disable health check for Elastic, Spring does not support 2.2 yet.
+management.health.elasticsearch.enabled=false
