archvist: fixed metrics endpoint security.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -369,7 +369,10 @@ spring.datasource.tomcat.maxActive=5
 ## Heath and Management
 
 ### Determines if anonymous users can see health endpoints.
-management.security.enabled = false
+management.security.enabled = true
+
+### Determines if anonymous users can see health endpoints.
+management.security.roles = zorroa::everyone
 
 ### Disable health check for Elastic, Spring does not support 2.2 yet.
 management.health.elasticsearch.enabled=false
