archivist: tune ES shard sizes for smaller installs.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -64,6 +64,10 @@ archivist.index.migrateEnabled = true
 archivist.index.migrateStatus = yellow
 
 ### The number of elastic shard replicas.
+### 3 shards is good for smaller installs, 3 for 2+ million assets, 5 for large cluster
+archivist.index.shards = 2
+
+### The number of elastic shard replicas.
 archivist.index.replicas = 1
 
 ## Priamary DB configuration.
