--- a/ldap/pom.xml
+++ b/ldap/pom.xml
@@ -11,6 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ldap</artifactId>
     <packaging>jar</packaging>
+    <version>1.0.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
