archivist: dont' make metrics sensative for now

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -403,7 +403,7 @@ endpoints.info.sensitive=false
 endpoints.health.sensitive=false
 
 ### Make /metrics endpoint sensitive
-endpoints.metrics.sensitive=true
+endpoints.metrics.sensitive=false
 
 ## Database Migration Settings
 
