server: added missing depend

--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
