ARL-153 - Adds dynamic watermark font sizing with a scaling option and a black outline.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -201,8 +201,8 @@ archivist.watermark.template = Requested by #[USER] on #[DATE]
 ### The minimum size (width or height) the image must be to get a watermark.
 archivist.watermark.min-proxy-size = 384
 
-### The watermark font size
-archivist.watermark.font-size = 10
+### The watermark font scale. Use to increase or decrease the font size.
+archivist.watermark.scale = 1.0
 
 ### The font for the watermark
 archivist.watermark.font-name = Arial Black
