--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -24,7 +24,7 @@
         <relativePath>../pom.xml</relativePath>
         <groupId>com.zorroa</groupId>
         <artifactId>zorroa-server</artifactId>
-        <version>0.39.1</version>
+        <version>0.40.0.SNAPSHOT</version>
     </parent>
 
     <dependencies>
