--- a/cluster/pom.xml
+++ b/cluster/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>zorroa-server</artifactId>
         <groupId>com.zorroa</groupId>
-        <version>0.39.1</version>
+        <version>0.40.0.SNAPSHOT</version>
     </parent>
 
     <groupId>com.zorroa</groupId>
