--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.zorroa.security</groupId>
     <artifactId>saml</artifactId>
-    <version>1.0.0</version>
+    <version>0.40.0.SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
