--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -14,10 +14,11 @@
         <relativePath>../pom.xml</relativePath>
         <groupId>com.zorroa</groupId>
         <artifactId>zorroa-server</artifactId>
-        <version>0.40.0.SNAPSHOT</version>
+        <version>0.40.0-SNAPSHOT</version>
     </parent>
 
     <properties>
+        <kotlin.version>1.2.41</kotlin.version>
         <rest-api.version>1.0.0</rest-api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>com.zorroa.archivist.Application</start-class>
@@ -295,7 +296,7 @@
                     <compilerPlugins>
                         <plugin>spring</plugin>
                     </compilerPlugins>
-                    </configuration>
+                </configuration>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -325,6 +326,7 @@
                         <version>${kotlin.version}</version>
                     </dependency>
                 </dependencies>
+
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -386,26 +388,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.4.0</version>
-                <executions>
-                    <execution>
-                        <id>Remove Local Database</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>/bin/rm</executable>
-                            <commandlineArgs>-rf unittest/index unittest/archivist.mv.db ../unittest/shared/ofs ../unittest/shared/jobs</commandlineArgs>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
         </plugins>
     </build>
 </project>
