--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.zorroa</groupId>
     <artifactId>zorroa-server</artifactId>
-    <version>0.40.0.SNAPSHOT</version>
+    <version>0.40.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>zorroa-server</name>
@@ -13,9 +13,9 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <zorroa-server.version>0.40.0.SNAPSHOT</zorroa-server.version>
+        <zorroa-server.version>0.40.0-SNAPSHOT</zorroa-server.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
-        <kotlin.version>1.2.30</kotlin.version>
+        <kotlin.version>1.2.41</kotlin.version>
     </properties>
 
     <modules>
