--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.zorroa.security</groupId>
     <artifactId>saml</artifactId>
-    <version>0.40.0.SNAPSHOT</version>
+    <version>0.40.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -15,7 +15,7 @@
     </parent>
 
     <properties>
-        <kotlin.version>1.2.30</kotlin.version>
+        <kotlin.version>1.2.41</kotlin.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
