archivist: phase 1 of multi-tenancy.  This patch adds the organization property to a few key places. For a 0.39 upgrade, a default organization is added.
Anything I touched that was java I also moved to kotlin.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -2,13 +2,16 @@
 
 ## Default Organization Settings
 
+### If the server is configured for single organization.
+archivist.organization.single-org-mode = true
+
 ### Email domain
 archivist.organization.domain = zorroa.com
 
 ## Local Path Settings
 
 ### A colon delimited list of locations the Archivist will search for plugin packages.
-archivist.path.pluginSearchPath=${archivist.path.home}/plugins:../../zorroa-plugin-sdk/dist
+archivist.path.pluginSearchPath=${archivist.path.home}/plugins:../../zorroa-plugin-sdk/java/dist
 
 ### The base path where the Archivist will look for its supporting directory structure.
 archivist.path.home=.
