--- a/ldap/pom.xml
+++ b/ldap/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.zorroa</groupId>
             <artifactId>server-sdk</artifactId>
-            <version>0.39.0</version>
+            <version>0.40.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
