--- a/saml/pom.xml
+++ b/saml/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>com.zorroa</groupId>
             <artifactId>server-sdk</artifactId>
-            <version>0.39.0</version>
+            <version>0.40.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
