all: updted to ES 6.4
- removed embedded client
- implemented high level client
- tests all broken, working on external ES cluster.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -5,10 +5,10 @@ archivist.path.home=unittest
 ### The SQL DB vendor.
 archivist.datasource.primary.vendor=postgresql
 
-flyway.schemas=unittest
+flyway.schemas=unittest40
 
 ### The JDBC URL to the Archivist SQL database.
-archivist.datasource.primary.url=jdbc:postgresql://localhost/${USER}?currentSchema=unittest
+archivist.datasource.primary.url=jdbc:postgresql://localhost/${USER}?currentSchema=unittest40
 
 ### The password for the Archivist SQL database.
 archivist.datasource.primary.password=
