archivist: lots of asset fixes around ES 6.2.4

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -14,7 +14,7 @@ archivist.datasource.primary.url=jdbc:postgresql://localhost/${USER}?currentSche
 archivist.datasource.primary.password=
 
 archivist.requests.managerEmail=${USER}@zorroa.com
-
+archivist.debug-mode.enabled = true
 #
 # Run the the web server and event server on different port.
 #
