--- a/ldap/pom.xml
+++ b/ldap/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ldap</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>0.39.2</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.zorroa</groupId>
             <artifactId>server-sdk</artifactId>
-            <version>0.39.1</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
