--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.zorroa</groupId>
     <artifactId>zorroa-server</artifactId>
-    <version>0.39.1</version>
+    <version>0.39.2</version>
     <packaging>pom</packaging>
 
     <name>zorroa-server</name>
@@ -13,7 +13,6 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <zorroa-server.version>0.39.1</zorroa-server.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
         <kotlin.version>1.2.30</kotlin.version>
     </properties>
@@ -95,25 +94,25 @@
             <dependency>
                 <groupId>com.zorroa</groupId>
                 <artifactId>cluster</artifactId>
-                <version>${zorroa-server.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.zorroa</groupId>
                 <artifactId>server-sdk</artifactId>
-                <version>${zorroa-server.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.zorroa</groupId>
                 <artifactId>sdk</artifactId>
-                <version>${zorroa-server.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.zorroa</groupId>
                 <artifactId>common</artifactId>
-                <version>${zorroa-server.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
